--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>25</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -17,7 +17,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.13.0</version>
+                    <version>3.14.0</version>
                     <configuration>
                         <release>${java.version}</release>
                         <encoding>${project.build.sourceEncoding}</encoding>
@@ -42,6 +42,15 @@
                 </executions>
                 <configuration>
                     <mainClass>io.github.edwgiz.svpncookie.cli.App</mainClass>
+                    <buildArgs>
+                        <buildArg>--gc=epsilon</buildArg>
+                        <buildArg>-R:MaxHeapSize=16m</buildArg>
+                        <buildArg>-march=native</buildArg>
+                        <buildArg>--enable-sbom</buildArg>
+                        <buildArg>--link-at-build-time</buildArg>
+                        <buildArg>--exact-reachability-metadata</buildArg>
+                        <buildArg>--initialize-at-build-time=io.github.edwgiz.svpncookie.cli.App,io.github.edwgiz.svpncookie.cli.HttpAdapter,io.github.edwgiz.svpncookie.cli.HttpOperations</buildArg>
+                    </buildArgs>
                 </configuration>
             </plugin>
         </plugins>
